--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,7 @@ button {
     color: white;
     cursor: pointer;
     margin: 5px;
+    transition: color 150ms linear;
 }
 
 button:disabled {
@@ -99,7 +100,7 @@ button:focus {
     margin: 0px auto;
     width: var(--size);
     height: var(--size);
-    background-color: var(--block-border-color);
+    background: var(--block-border-color);
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -125,7 +126,7 @@ button:focus {
     --size: calc(var(--spacing) + 3 * var(--cell-size));
     width: var(--size);
     height: var(--size);
-    background-color: var(--cell-border-color);
+    background: var(--cell-border-color);
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -136,7 +137,7 @@ button:focus {
 /* cells */
 
 .cell {
-    background-color: white;
+    background: white;
     width: var(--cell-size);
     height: var(--cell-size);
     text-align: center;
