--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,16 @@ button {
     color: inherit;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 /* header */
 
 header {
